# c-demo

./: CMakeLists.txt  README.md  main.c  main.h
example/: simple_calculator.c  simple_calculator.h
example/calc/: calc.c  calc.h  getop.c  stack.c
example/command/: ls.c
example/zeromq/: client.c  server.c  zeromq.h
syntax/: basic.c  basic.h  bitwise.c  builtin.c  error.c  file.c  kqueue.c  learn_builtin.c  learn_builtin.h  lib_io.c  memory.c  pointer.c  process.c  signal.c  socket.c  struct.c  syscall_io.c  syscalls.c  thread.c  union.c
third-lib/hiredis/: redis_client.c
third-lib/zeromq/: zhelper.h  zmq_rep_server.c  zmq_req_client.c
